# spark-bq

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  STUDY_PLAN.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: format_py.py  run_tests.py
.github/: copilot-instructions.md
config/: logging.py  settings.py
notebooks/: 01_lazy_evaluation.ipynb  02_jobs_stages_tasks_analysis.ipynb  02_jobs_stages_tasks_analysis.md  02_jobs_stages_tasks_analysis_detailed.ipynb  03_partitioning_and_skew.ipynb  04_join_strategies.ipynb  05_catalyst_optimizer.ipynb  06_aqe_deep_dive.ipynb  07_memory_model_and_spill.ipynb  08_caching_and_persistence.ipynb  sample_pipeline_demo.ipynb
scripts/: submit_job.py
src/: __init__.py  bigquery_connector.py  spark_session.py
src/pipelines/: __init__.py  sample_pipeline.py
src/transformations/: __init__.py  common_transforms.py
src/utils/: data_validation.py
tests/: test_data_processing.py
